[package]
name = "yarte_wasm_app"
version = "0.0.7"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Yarte WASM application"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_wasm_app"
edition = "2018"
include = ["src/**/*", "Cargo.toml"]
keywords = ["markup", "template", "handlebars", "html", "wasm"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
yarte_helpers = { version = "0.6", path = "../yarte_helpers", features = ["big_num"] }
yarte_derive = { version = "0.6", path = "../yarte_derive", features = ["client"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

wasm-bindgen = "0.2"
[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlCollection",
  "HtmlElement",
  "Node",
  "Text",
  "Window",
]


[dev-dependencies]
wasm-bindgen-futures = "0.4"
async-timer = "0.7"
wasm-bindgen-test = "0.3"
