[package]
name = "client"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Coverage for WASM applications"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/botika/yarte"
workspace = ".."

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
yarte = { version = "0.5", path = "../../yarte" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
model = { version = "*", path = "../model" }

[build-dependencies]
yarte = { version = "0.5", path = "../../yarte" }

[lib]
crate-type = ["cdylib"]
