[package]
name = "client"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Coverage for WASM applications"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/botika/yarte"
workspace = ".."

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
yarte = { version = "0.6", path = "../../yarte", features = ["client"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
model = { version = "*", path = "../model" }

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement"
]

[build-dependencies]
yarte = { version = "0.6", path = "../../yarte" }

[lib]
crate-type = ["cdylib"]
