[package]
name = "server"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Coverage for WASM applications"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/botika/yarte"
workspace = ".."

[dependencies]
yarte = { version = "0.5", path = "../../yarte", features = ["with-actix-web", "wasm"] }
model = { version = "*", path = "../model" }
serde = { version = "1.0", features = ["derive"] }

env_logger = "0.7"

actix-web = "2.0"
actix-rt = "1.0"

[build-dependencies]
yarte = { version = "0.5", path = "../../yarte", features = ["with-actix-web", "wasm"] }
