[package]
name = "bytes"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
publish = false
edition = "2021"

workspace = "../.."

[dependencies]
yarte = { workspace = true, features = ["bytes-buf"] }

buf-min = { workspace = true }

[build-dependencies]
yarte_helpers = { workspace = true }
