[package]
name = "extra-renders"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
publish = false
edition = "2018"

workspace = "../.."

[dependencies]
yarte = { path = "../../yarte", version = "*", features = ["bytes-buf"]  }
yarte_helpers = { path = "../../yarte_helpers", version = "^0.15.2", features = ["extra-renders"] }
uuid = "1.0"

[build-dependencies]
yarte = { path = "../../yarte", version = "*" }
yarte_helpers = { path = "../../yarte_helpers", version = "*" }
