[package]
name = "example"
version = "0.0.1"
publish = false
edition = "2018"

[workspace]
members = ["../fortune/src", "codegen"]

[dependencies]
yarte_wasm_app = { path = "../fortune", version = "*" }
codegen = { path = "codegen", version = "*" }
hashbrown = { version ="0.6", default_features = false, features = ["ahash"] }

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = {version = "0.7", features = ["small_rng"]}

wasm-bindgen = "0.2"
js-sys = "0.3"
[dependencies.web-sys]
version = "0.3"
features = [
  "Node",
  "Document",
  "Window",
  "Element",
  "HtmlElement",
  "EventTarget",
  "Event",
  "HtmlCollection"
]

[profile.release]
lto = true
panic = "abort"

[lib]
crate-type = ["cdylib"]
