[package]
name = "simple"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
publish = false
edition = "2018"

workspace = "../.."

[dependencies]
yarte = { path = "../../yarte", version = "*", features = ["html-min", "bytes-buf"]  }

[build-dependencies]
yarte = { path = "../../yarte", version = "*" }
