[package]
name = "yarte_lexer_gencode"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Lexer codegen for yarte"
license = "MIT/Apache-2.0"
readme = "../../README.md"
edition = "2018"
workspace = "../.."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
