[package]
name = "example"
version = "0.0.1"
publish = false
edition = "2018"

[workspace]
members = ["."]

[dependencies]
yarte_wasm_app = { path = "../.", version = "*" }

wasm-bindgen = "0.2"
wasm-bindgen-test = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console"
]


[profile.release]
lto = true
panic = "abort"

[lib]
crate-type = ["cdylib"]
