[package]
name = "client"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Coverage for WASM applications"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/botika/yarte"
[workspace]
members = [""]

[profile.release]
lto = true

[dependencies]
wee_alloc = "0.4"
yarte_wasm_app = { version = "*", path = "../../../delorean" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
model = { version = "*", path = "../model" }

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement"
]

[build-dependencies]
yarte_helpers = { version = "*", default-features = false, path = "../../../yarte_helpers" }

[lib]
crate-type = ["cdylib"]
